animate header update

--- a/src/styles/animate.less
+++ b/src/styles/animate.less
@@ -1,12 +1,6 @@
 .animations(@boolean) when (@boolean = true) {
-/*! Animate Less is based on Dan Eden's animate.css */
+/*! Animate Less is based on Dan Eden's animate.css, http://daneden.me/animate. */
 
-/**
- * Animate.css - http://daneden.me/animate.
- * Licensed under the MIT license - http://opensource.org/licenses/MIT
- * Copyright (c) 2014 Daniel Eden
- */
-  
 .animated {
   animation-duration: 500ms;
   animation-fill-mode: both;
