--- a/src/styles/forms.less
+++ b/src/styles/forms.less
@@ -87,14 +87,19 @@
         // This is basic styled form. You can make variatios like .form-minimal
         .form {
             
-            input[type=text],
-            input[type=password],
-            input[type=email],
-            input[type=url],
-            input[type=date],
-            input[type=tel],
-            input[type=number],
-            input[type=search], 
+            input[type="date"],
+            input[type="datetime"],
+            input[type="datetime-local"],
+            input[type="email"],
+            input[type="month"],
+            input[type="number"],
+            input[type="password"],
+            input[type="search"],
+            input[type="tel"],
+            input[type="text"],
+            input[type="time"],
+            input[type="url"],
+            input[type="week"], 
             textarea, 
             select {
                 // Reset iOS box-shadow
