--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -97,7 +97,7 @@ input[type="submit"] {
 
     .btn-link {
         color: @base-color;
-        font-weight: normal;
+        font-weight: 400;
         border-radius: 0;
         &,
         &:active,
