--- a/src/styles/conditional-styles.less
+++ b/src/styles/conditional-styles.less
@@ -22,7 +22,7 @@
   .show-lg-down,
   .hide-xl-only,
   .hide-xl-up {
-    display: inherit !important;
+    .show-conditional();
   }
   .hide-sm-only,
   .hide-sm-up,
