--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -56,7 +56,7 @@ a {
 }
 // Basic typography
 // -------------------------------------------------------
-h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h4,h5,h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	font-family: @heading-font-family;
 	line-height: @heading-line-height;
 	letter-spacing: @heading-letter-spacing;
