--- a/src/styles/helper-classes.less
+++ b/src/styles/helper-classes.less
@@ -91,6 +91,9 @@
     .bg-info {
         background-color: @color-info;
     }
+    .color-muted {
+        opacity: @color-muted;
+    }
     .color-primary {
 	   color: @color-primary;
     }
