--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,17 +1,14 @@
-/*
- * RAE-Framework - 1.0.0
- * Copyright © 2014 Rae
- * http://www.rae.fi
- */
-
 @charset "UTF-8"; 
 
 //
 // Imports
 // -------------------------------------------------------
+
 	@import 'variables';
 	@import 'mixins';
 	@import 'normalize';
+	@import 'debug';
+	@import 'current-media-query';
 	@import	'clearfix';
 	@import 'icons';
 	@import 'animate';
@@ -25,7 +22,7 @@
 	@import 'conditional-styles';
 	@import 'helper-classes';
 	@import	'print';
-	@import 'current-media-query';
+
 
 //
 // Site styles
