--- a/src/styles/embedded-content.less
+++ b/src/styles/embedded-content.less
@@ -52,23 +52,22 @@ svg {
     fill: currentColor;
 }
 
-// Flexible video classes
-.flex-video {
+// Responsive video class
+.responsive-video {
 	position: relative;
     padding-bottom: (9 / 16 * 100%); // 16:9 aspect-ratio
     padding-top: 0;
 	height: 0;
-	overflow: hidden; 
-}
-
-.flex-video iframe,
-.flex-video object,
-.flex-video embed,
-.flex-video video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;  
+	overflow: hidden;
+    iframe,
+    object,
+    embed,
+    video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;  
+    }
 }
