--- a/src/styles/tooltips.less
+++ b/src/styles/tooltips.less
@@ -6,7 +6,6 @@
     // Variables
     @tooltip-position:  (@tooltip-offset + 2 + @tooltip-arrow-size);
     @tooltip-height: @tooltip-font-size + 2 * @tooltip-vertical-padding;
-
     
     
     // The 'before' pseudo element is concerned with the body 
@@ -21,7 +20,7 @@
             visibility: hidden;
             pointer-events: none;
             position: absolute;
-            z-index: 10000; // always on top
+            z-index: @z-index-8;
             transition: 
                 opacity @tooltip-anim-duration ease-in-out, 
                 transform @tooltip-anim-duration ease-in-out;
@@ -34,7 +33,7 @@
             content: "";
             width: 0;
             height: 0;
-            z-index: 10001;
+            z-index: (@z-index-8 + 1);
             background: transparent;
             border: @tooltip-arrow-size solid transparent;
         }
