remove unnecessary conditional classes

--- a/src/styles/conditional-styles.less
+++ b/src/styles/conditional-styles.less
@@ -12,119 +12,91 @@
   }
   
   .show-sm-only,
-  .show-sm-up,
-  .show-sm-down,
   .hide-md-only,
   .hide-md-up,
   .show-md-down,
   .hide-lg-only,
   .hide-lg-up,
   .show-lg-down,
-  .hide-xl-only,
-  .hide-xl-up {
+  .hide-xl-only {
     .show-conditional();
   }
   .hide-sm-only,
-  .hide-sm-up,
-  .hide-sm-down,
   .show-md-only,
   .show-md-up,
   .hide-md-down,
   .show-lg-only,
   .show-lg-up,
   .hide-lg-down,
-  .show-xl-only,
-  .show-xl-up,
-  .hide-xl-down {
+  .show-xl-only {
     .hide-conditional();
   }
   
   @media @medium-up {
     .hide-sm-only,
-    .show-sm-up,
-    .hide-sm-down,
     .show-md-only,
     .show-md-up,
     .show-md-down,
     .hide-lg-only,
     .hide-lg-up,
     .show-lg-down,
-    .hide-xl-only,
-    .hide-xl-up {
+    .hide-xl-only {
       .show-conditional();
     }
     .show-sm-only,
-    .hide-sm-up,
-    .show-sm-down,
     .hide-md-only,
     .hide-md-up,
     .hide-md-down,
     .show-lg-only,
     .show-lg-up,
     .hide-lg-down,
-    .show-xl-only,
-    .show-xl-up,
-    .hide-xl-down {
+    .show-xl-only {
       .hide-conditional();
     }
   }
   
   @media @large-up {
-    .hide-sm-only,
-    .show-sm-up,
-    .hide-sm-down,
+    .hide-sm-only
     .hide-md-only,
     .show-md-up,
     .hide-md-down,
     .show-lg-only,
     .show-lg-up,
     .show-lg-down,
-    .hide-xl-only,
-    .hide-xl-up {
+    .hide-xl-only {
       .show-conditional();
     }
     .show-sm-only,
-    .hide-sm-up,
-    .show-sm-down,
     .show-md-only,
     .hide-md-up,
     .show-md-down,
     .hide-lg-only,
     .hide-lg-up,
     .hide-lg-down,
-    .show-xl-only,
-    .show-xl-up,
-    .hide-xl-down {
+    .show-xl-only {
       .hide-conditional();
     }
   }
   
   @media @xlarge-up {
     .hide-sm-only,
-    .show-sm-up,
-    .hide-sm-down,
     .hide-md-only,
     .show-md-up,
     .hide-md-down,
     .hide-lg-only,
     .show-lg-up,
     .hide-lg-down,
-    .show-xl-only,
-    .show-xl-up {
+    .show-xl-only {
       .show-conditional();
     }
     .show-sm-only,
-    .hide-sm-up,
-    .show-sm-down,
     .show-md-only,
     .hide-md-up,
     .show-md-down,
     .show-lg-only,
     .hide-lg-up,
     .show-lg-down,
-    .hide-xl-only,
-    .hide-xl-up,
-    .hide-xl-down {
+    .hide-xl-only {
       .hide-conditional();
     }
   }
