--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -47,7 +47,7 @@
 @modular-scale-factor: 			1.333;
 
 // @Font-Face
-// Options: 'font-family', 'font-file', font-weight, font-style, 'svg-name'
+// Options: 'font-family', 'font-file-name', font-weight, font-style
 //@font-face {.font-face('Raleway', 'Raleway-Regular', 400, normal);}
 //@font-face {.font-face('Raleway', 'Raleway-Bold', 700, normal);}
 
