--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -6,10 +6,10 @@
 
 	@import 'variables';
 	@import 'mixins';
-	@import 'normalize';
 	@import 'debug';
 	@import 'current-media-query';
-	@import	'clearfix';
+	@import 'normalize';
+	@import	'print';
 	@import 'icons';
 	@import 'animate';
 	@import 'global';
@@ -17,11 +17,11 @@
 	@import	'tables';
 	@import 'forms';
 	@import 'buttons';
-	@import 'tooltips';
 	@import 'grid';
-	@import 'conditional-styles';
+	@import 'tooltips';
+	@import	'clearfix';
 	@import 'helper-classes';
-	@import	'print';
+	@import 'responsive-helper-classes';
 
 
 //
