--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -266,7 +266,7 @@
 @use-tables:                    true;
     @use-table-styles:			true;
 
-@use-conditional-styles:		true;
+@use-responsive-helper-classes:	true;
 @use-helper-classes:			true;
 @use-print-styles: 				false;
 
