--- a/src/styles/responsive-helper-classes.less
+++ b/src/styles/responsive-helper-classes.less
@@ -1,6 +1,6 @@
-.conditional-styles(@boolean) when (@boolean = true) {
+.responsive-helper-classes(@boolean) when (@boolean = true) {
 //
-// Conditionals Styles
+// Responsive helper classes
 // -------------------------------------------------------
   
   // Variables
@@ -102,4 +102,4 @@
   }
 	
 }
-.conditional-styles(@use-conditional-styles); 
+.responsive-helper-classes(@use-responsive-helper-classes); 
