--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -14,6 +14,7 @@ input[type="submit"] {
 .use-button-styles(@boolean) when (@boolean = true) {
     .btn {
         .button-size();
+        border: @button-border-width solid transparent;
         border-radius: @button-border-radius;
         display: inline-block;
         font-weight: @button-font-weight;
@@ -48,24 +49,18 @@ input[type="submit"] {
             text-shadow: none;
         }
     }
-
+    
     //Buttons sizes
     .btn-sm {
-        font-size: ceil(@button-font-size * .8);
-        height: ceil(@button-height * .8);
-        line-height: ceil((@button-height * .8) - (@button-border-width * 2));
+        .button-size(@button-size-small);
     }
     
     .btn-lg {
-        font-size: ceil(@button-font-size * 1.5);
-        height: (@button-height * 1.5);
-        line-height: ((@button-height * 1.5) - (@button-border-width * 2));
+        .button-size(@button-size-large);
     }
     
     .btn-xl {
-        font-size: ceil(@button-font-size * 2);
-        height: (@button-height * 2);
-        line-height: ((@button-height * 2) - (@button-border-width * 2));
+        .button-size(@button-size-xlarge);
     }
 
     .btn-block {
