--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -83,13 +83,11 @@
 // Button sizes
 // -------------------------------------------------------
 // .button-size(); Defaults to normal button size
-.button-size(@height: @button-height; @padding-horizontal: @button-horizontal-padding; @font-size: @button-font-size; @border-width: @button-border-width; @border-radius: @button-border-radius;) {
-	padding: 0 @padding-horizontal;
-	font-size: @font-size;
-	height: @height;
-	line-height: (@height - (@border-width * 2));
-	border: @button-border-width solid transparent;
-	border-radius: @border-radius;
+.button-size(@multiple: 1, @h: @button-height, @ph: @button-horizontal-padding, @fs: @button-font-size, @bw: @button-border-width) {
+    font-size: round(@fs * @multiple, 3);
+	height: round(@h * @multiple, 3);
+	line-height: round((@h  * @multiple) - (@bw * 2), 3);
+	padding: 0 round(@ph * @multiple, 3);
 }
 
 // CSS image replacement
