clear float in .form

--- a/src/styles/forms.less
+++ b/src/styles/forms.less
@@ -91,6 +91,7 @@
         
         // This is basic styled form. You can make variatios like .form-minimal
         .form {
+            &:extend(.clearfix all);
             
             input[type="date"],
             input[type="datetime"],
