--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -8,7 +8,7 @@
 	@import 'mixins';
 	@import 'debug';
 	@import 'current-media-query';
-	@import 'normalize';
+	@import 'resets';
 	@import	'print';
 	@import 'icons';
 	@import 'animate';
@@ -27,5 +27,3 @@
 //
 // Site styles
 // -------------------------------------------------------
-
-
