--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -13,72 +13,72 @@
 // Dictate how many columns you would like your grid 
 // system to use. Default value is 12. 
 // Gutter width between columns (use px|%|rem)
-@grid-columns: 					12;
-@grid-gutter-width: 			24px;
+@grid-columns:                  12;
+@grid-gutter-width:             24px;
 
 // Breakpoints & container widths
-@use-screen-sm:					true;
-	@container-sm: 				100%;
-	@screen-sm-min:				480px; //30em
-@use-screen-md:					true;
-	@container-md: 				(@screen-md-min - 16px);
-	@screen-md-min:				768px; //48em
-@use-screen-lg:					true;
-	@container-lg:				(@screen-lg-min - 16px);
-	@screen-lg-min:				992px; //62em
-@use-screen-xl:					true;
-	@container-xl:				(@screen-xl-min - 16px);	
-	@screen-xl-min:				1280px; //80em
+@use-screen-sm:                 true;
+	@container-sm:              100%;
+	@screen-sm-min:             480px; //30em
+@use-screen-md:                 true;
+	@container-md:              (@screen-md-min - 16px);
+	@screen-md-min:             768px; //48em
+@use-screen-lg:                 true;
+	@container-lg:              (@screen-lg-min - 16px);
+	@screen-lg-min:             992px; //62em
+@use-screen-xl:                 true;
+	@container-xl:              (@screen-xl-min - 16px);	
+	@screen-xl-min:             1280px; //80em
 
 
 // TYPOGRAPHY & BASELINE PROPORTIONS
 // -------------------------------------------------------
 
-@base-font-size: 				16px;
-@base-line-height:				24px;
+@base-font-size:                16px;
+@base-line-height:              24px;
 
 // Line-height ratio & element spacing
-@line-height-ratio: 			(unit(@base-line-height / @base-font-size));
-@base-spacing-unit:				@base-line-height;
-@base-spacing-unit-half:		round(@base-line-height / 2);
-@base-spacing-unit-double:		round(@base-line-height * 2);
+@line-height-ratio:             (unit(@base-line-height / @base-font-size));
+@base-spacing-unit:             @base-line-height;
+@base-spacing-unit-half:        round(@base-line-height / 2);
+@base-spacing-unit-double:      round(@base-line-height * 2);
 
 // Modular Scale – Rate of growth for headings, buttons, etc. 
-@modular-scale-factor: 			1.333;
+@modular-scale-factor:          1.333;
 
 // @Font-Face
 // Options: 'font-family', 'font-file-name', font-weight, font-style
 //@font-face {.font-face('Raleway', 'Raleway-Regular', 400, normal);}
 //@font-face {.font-face('Raleway', 'Raleway-Bold', 700, normal);}
 
-@base-font-family:				"proxima-nova", sans-serif;
-@heading-font-family:			@base-font-family;
-@blockquote-font-family:		@base-font-family;	
+@base-font-family:              "proxima-nova", sans-serif;
+@heading-font-family:           @base-font-family;
+@blockquote-font-family:        @base-font-family;	
 
 // Heading styles
-@heading-font-weight:			700;
-@heading-letter-spacing:		-0.010em;
-@heading-line-height:			1.25;
+@heading-font-weight:           700;
+@heading-letter-spacing:        -0.010em;
+@heading-line-height:           1.25;
 
 
 // COLORS
 // -------------------------------------------------------
 
 // Greyscale
-@grey-25:						lighten(@black, 97,5%);
-@grey-50:						lighten(@black, 95%);
-@grey-100:						lighten(@black, 90%);
-@grey-200:						lighten(@black, 80%);
-@grey-300:						lighten(@black, 70%);
-@grey-400:						lighten(@black, 60%);
-@grey-500:						lighten(@black, 50%);
-@grey-600:						lighten(@black, 40%);
-@grey-700:						lighten(@black, 30%);
-@grey-800:						lighten(@black, 20%);
-@grey-900:						lighten(@black, 10%);
+@grey-25:                       lighten(@black, 97,5%);
+@grey-50:                       lighten(@black, 95%);
+@grey-100:                      lighten(@black, 90%);
+@grey-200:                      lighten(@black, 80%);
+@grey-300:                      lighten(@black, 70%);
+@grey-400:                      lighten(@black, 60%);
+@grey-500:                      lighten(@black, 50%);
+@grey-600:                      lighten(@black, 40%);
+@grey-700:                      lighten(@black, 30%);
+@grey-800:                      lighten(@black, 20%);
+@grey-900:                      lighten(@black, 10%);
 
-@black:                  		#000000;
-@white:                     	#ffffff;
+@black:                         #000000;
+@white:                         #ffffff;
 
 // Custom brand colors
 @color-primary:                 #ae956d;
@@ -93,10 +93,10 @@
 
 // UI colors
 @color-muted:                   .5;
-@color-success:					#5cb85c;
-@color-warning:					#ed9c28;
-@color-danger:					#d9534f;
-@color-info:					#5bc0de;
+@color-success:                 #5cb85c;
+@color-warning:                 #ed9c28;
+@color-danger:                  #d9534f;
+@color-info:                    #5bc0de;
 
 // Social Media colors
 @color-behance:                 #053eff;
@@ -123,16 +123,15 @@
 @color-youtube:                 #bb0000;
 
 // Basic colors for body
-@base-background: 				@white;
-@base-color:					@grey-800;
-@base-link-color: 				@color-primary;
+@base-background:               @white;
+@base-color:                    @grey-800;
+@base-link-color:               @color-primary;
 
 // Selections
-@selection-background: 			@base-link-color;
-@selection-color: 				@white;
+@selection-background:          rgba(red(@color-primary), green(@color-primary), blue(@color-primary), .6);
 
 // Hr
-@hr-color: 						@grey-100;
+@hr-color:                      @grey-100;
 
 
 // FORMS, INPUTS & BUTTONS
@@ -151,33 +150,33 @@
 @legend-font-weight:            700;
 
 // Inputs, textarea, select
-@input-color: 					@grey-800;
-@input-placeholder-color:		@grey-400;
+@input-color:                   @grey-800;
+@input-placeholder-color:       @grey-400;
 @input-background:              transparent;
-@input-border-color:			@grey-200;
-@input-border-color-hover:		@grey-600;
-@input-border-color-focus:		@grey-600;
-@input-border-width:			1px;
-@input-border-radius:			0;
-@input-font-size:				@base-font-size;
-@input-height:					48px;
-@input-horizontal-padding:		.5em;
+@input-border-color:            @grey-200;
+@input-border-color-hover:      @grey-600;
+@input-border-color-focus:      @grey-600;
+@input-border-width:            1px;
+@input-border-radius:           0;
+@input-font-size:               @base-font-size;
+@input-height:                  48px;
+@input-horizontal-padding:      .5em;
 @input-box-shadow:              none;
 @input-focus-box-shadow:        inset 0 0 5px rgba(red(@grey-500), green(@grey-500), blue(@grey-500), 0.25);
 
 // Checkbox & radio buttons
 @input-box-size:                @base-spacing-unit;
 @input-checkbox-checked-color:  currentColor;
-@input-checkbox-border-radius:	0;
+@input-checkbox-border-radius:  0;
 @input-radio-checked-color:     currentColor;
 
 // Buttons
-@button-font-size:				14px;
-@button-font-weight:			700;
-@button-height:					40px;
-@button-horizontal-padding:		16px;
-@button-border-width:			1px;
-@button-border-radius:			0;
+@button-font-size:              14px;
+@button-font-weight:            700;
+@button-height:                 40px;
+@button-horizontal-padding:     16px;
+@button-border-width:           1px;
+@button-border-radius:          0;
 
 // Button sizes will be derived from base button proportions
 @button-size-small:             0.8;
@@ -190,13 +189,13 @@
 // Use table styles via classes: table-border, table-border-rows, 
 // table-border-cells, table-stripes, table-responsive
 
-@table-font-size:				14px;
-@table-cell-padding:			6px @base-spacing-unit-half;
-@table-background:				transparent;
-@table-headfoot-color:			@grey-800;
-@table-headfoot-font-weight:	700;
-@table-border-color:			@grey-100;
-@table-stripes-bg:				@grey-25;
+@table-font-size:               14px;
+@table-cell-padding:            6px @base-spacing-unit-half;
+@table-background:              transparent;
+@table-headfoot-color:          @grey-800;
+@table-headfoot-font-weight:    700;
+@table-border-color:            @grey-100;
+@table-stripes-bg:              @grey-25;
 
 
 // Z-INDEX HIERARCY
@@ -222,10 +221,10 @@
 
 // Border-radius
 @border-radius-default:         4px;
-@border-radius-large:			8px;
+@border-radius-large:           8px;
 
 // Box-shadow
-@box-shadow-default:			0 8px 16px rgba(230, 230, 230, 0.4);
+@box-shadow-default:            0 8px 16px rgba(230, 230, 230, 0.4);
 
 // Transition
 @transition-duration-default:   200ms;
@@ -256,25 +255,25 @@
 // in your project to `true` and any components
 // you do not wish to be included to `false`
 
-@use-normalize:   				true;
-@use-clearfix:    				true;
+@use-resets:                    true;
+@use-clearfix:                  true;
 
 @use-container:                 true;
-@use-columns:					true;
-	@use-push:					true;
-	@use-pull:					true;
-	@use-offset:				true;
+@use-columns:                   true;
+	@use-push:                  true;
+	@use-pull:                  true;
+	@use-offset:                true;
 
-@use-forms:      				true;
-    @use-form-styles:			true;
-@use-button-styles:				true;
+@use-forms:                     true;
+    @use-form-styles:           true;
+@use-button-styles:             true;
 @use-tables:                    true;
-    @use-table-styles:			true;
+    @use-table-styles:          true;
 
-@use-responsive-helper-classes:	true;
-@use-helper-classes:			true;
-@use-print-styles: 				false;
+@use-responsive-helper-classes: true;
+@use-helper-classes:            true;
+@use-print-styles:              false;
 
-@use-icons:   					true;
-@use-tooltips:   				true;
-@use-animations:   				true;
+@use-icons:                     true;
+@use-tooltips:                  true;
+@use-animations:                true;
