--- a/src/styles/tooltips.less
+++ b/src/styles/tooltips.less
@@ -46,6 +46,7 @@
             content: attr(data-tooltip);
             font-size: @tooltip-font-size;
             line-height: @tooltip-font-size;
+            letter-spacing: @tooltip-letter-spacing;
             text-align: left;
             text-transform: none;
             padding: @tooltip-vertical-padding @tooltip-horizontal-padding;
