--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -201,16 +201,21 @@
 // Z-INDEX HIERARCY
 // -------------------------------------------------------
 
-@z-index-1:                     1010; // i.e navbar
-@z-index-2:                     1020; // i.e navbar dropdown
-@z-index-3:                     1030; // i.e fixed navbar
-@z-index-4:                     1040; // i.e alerts & notifications
-@z-index-5:                     1050; // i.e modal background
-@z-index-6:                     1060; // i.e modal window
-@z-index-7:                     1070; // i.e popover
-@z-index-8:                     1080; // i.e tooltip
-@z-index-9:                     1090;
-@z-index-10:                    1100;
+@z-index-1:                     100; // i.e navbar
+@z-index-2:                     200; // i.e navbar dropdown
+@z-index-3:                     300; // i.e fixed navbar
+@z-index-4:                     400;
+@z-index-5:                     500;
+@z-index-6:                     600; // i.e alerts & notifications
+@z-index-7:                     700; // i.e popover
+@z-index-8:                     800; // i.e tooltip
+@z-index-9:                     900; // i.e modal
+@z-index-10:                    1000; // development
+
+// Z-Index Applications
+
+@z-index-9--tooltip:            @z-index-9;
+
 
 
 // MISC
@@ -224,7 +229,7 @@
 @border-radius-large:           8px;
 
 // Box-shadow
-@box-shadow-default:            0 8px 16px rgba(230, 230, 230, 0.4);
+@box-shadow-default:            0 8px 16px rgba(0, 0, 0, 0.05);
 
 // Transition
 @transition-duration-default:   200ms;
@@ -238,7 +243,6 @@
 @tooltip-border-radius:         3px;
 @tooltip-vertical-padding:      8px;
 @tooltip-horizontal-padding:    10px;
-@tooltip-padding:               1em;
 @tooltip-multiline-width:       160px;
 @tooltip-box-shadow:            none;
 @tooltip-offset:                4px;
@@ -246,6 +250,7 @@
 @tooltip-anim-delay:            100ms;
 @tooltip-font-size:             12px;
 @tooltip-font-weight:           400;
+@tooltip-letter-spacing:        .01em;
 @tooltip-arrow-size:            6px;
 
 
